template.yaml
---
# Source: kube-wordpress-mysql/templates/mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-svc-mysql
spec:
  #type:        # O headless service não possui type definido
  selector:
    app: mysql
  ports:
  - port: 3306
    protocol: TCP
---
# Source: kube-wordpress-mysql/templates/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-svc-wordpress
spec:
  type: ClusterIP
  externalName: wordpress.app-wordpress.svc.cluster.local
  selector:
    app: wordpress
  ports:
  - port: 80
    protocol: TCP
---
# Source: kube-wordpress-mysql/templates/wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-deployment-wordpress
  labels:
    
      app.kubernetes.io/component: application
    
      app.kubernetes.io/instance: wordpress-mainapp
    
      app.kubernetes.io/managed-by: helm
    
      app.kubernetes.io/name: wordpress
    
      app.kubernetes.io/part-of: wordpress
    
      app.kubernetes.io/version: 1.0.0
    
      compliance: none
    
      confidenciality: restrict
    
      enviroment: production
       

spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: wordpress-mainapp
  
  replicas: 1
  
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: wordpress-mainapp
    spec:
      containers:
        - name: wordpress
          image: wordpress:php8.1-apache

          resources:
            limits:
              memory: 256Mi
              cpu: 300m
            requests:
              memory: 128Mi
              cpu: 100m           

          startupProbe:                 # Estrutura para start apenas desse container. O que parece razoável? Se o banco estiver no ar ok ,mas se não, pode ter que esperar um pouco. Para o start tudo bem.
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

          readinessProbe:               # Essa é a reação mais rápida a falhas. O tráfego é redirecionado. Provavelmente a falha é externa.
            httpGet:
              path: /
              port: 80
            timeoutSeconds: 10
            periodSeconds: 30
            failureThreshold: 1

          livenessProbe:                # Essa é a reação mais lenta, gerando reboot da maquina. Isso considera que a falha é interna. 
            httpGet:
              path: /
              port: 80
            timeoutSeconds: 20
            periodSeconds: 60
            failureThreshold: 1
---
# Source: kube-wordpress-mysql/templates/mysql/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-statefulset-mysql
  labels:
    
      app.kubernetes.io/component: database
    
      app.kubernetes.io/instance: mysql-general
    
      app.kubernetes.io/managed-by: helm
    
      app.kubernetes.io/name: mysql
    
      app.kubernetes.io/part-of: wordpress
    
      app.kubernetes.io/version: 1.0.0
    
      compliance: none
    
      confidenciality: restrict
    
      enviroment: production
          

spec:
  serviceName: release-name-svc-mysql
  
  replicas: 1
  
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7

        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "100m"

        volumeMounts:
          - mountPath: /var/lib/mysql2
            name: mysql-volume-claim
        startupProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 120
          timeoutSeconds: 5
          periodSeconds: 15
          

        readinessProbe:
          tcpSocket:
            port: 3306
          timeoutSeconds: 5
          periodSeconds: 30

        livenessProbe:
          tcpSocket:
            port: 3306
          timeoutSeconds: 10
          periodSeconds: 60         


      volumes:
      - name: mysql-volume-claim
        persistentVolumeClaim:
          claimName: release-name-google-pvc
#
---
# Source: kube-wordpress-mysql/templates/general/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-ingress
      
 
spec:
  rules:
  - host: wp2.anselme.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress
            port: 
              number: 80
